syntax = "proto3";

package bytebase.store;

import "store/sensitive_data.proto";

option go_package = "generated-go/store";

// IssuePayloadApproval records the approval template used and approval history for an issue.
message IssuePayloadApproval {
  // Approver represents a user who can approve or reject an issue.
  message Approver {
    // Status represents the approver's decision state.
    enum Status {
      STATUS_UNSPECIFIED = 0;
      // Approval is pending from this approver.
      PENDING = 1;
      // Approver has approved the issue.
      APPROVED = 2;
      // Approver has rejected the issue.
      REJECTED = 3;
    }
    // The current approval status.
    Status status = 1;

    // The ID of the principal who is the approver.
    int32 principal_id = 2;
  }

  // The approval template being used for this issue.
  ApprovalTemplate approval_template = 1;
  // List of approvers and their current status.
  repeated Approver approvers = 2;

  // Whether the system has finished finding a matching approval template.
  // False means the backend is still searching for matching templates.
  bool approval_finding_done = 3;

  // Error message if approval template finding failed.
  string approval_finding_error = 4;

  // Reserved: risk_level was moved to Issue message
  reserved 5;
  reserved "risk_level";
}

// ApprovalTemplate defines the approval workflow and requirements for an issue.
message ApprovalTemplate {
  // The approval workflow specification.
  ApprovalFlow flow = 1;
  // Human-readable title of the approval template.
  string title = 2;
  // Detailed description of when this template applies.
  string description = 3;
}

// ApprovalFlow defines the sequence of approvals required.
message ApprovalFlow {
  // List of role names that must approve, in order.
  repeated string roles = 1;
}

// SensitiveDataApprovalConfig represents the approval configuration for sensitive data changes.
message SensitiveDataApprovalConfig {
  // The approval flow for low sensitivity data changes.
  ApprovalFlow low_sensitivity_flow = 1;
  // The approval flow for medium sensitivity data changes.
  ApprovalFlow medium_sensitivity_flow = 2;
  // The approval flow for high sensitivity data changes.
  ApprovalFlow high_sensitivity_flow = 3;
  // Whether this configuration is enabled for the workspace.
  bool enabled = 4;
  // The ID of the user who created this configuration.
  int32 creator_id = 5;
  // The ID of the user who last updated this configuration.
  int32 updater_id = 6;
  // The time when this configuration was created.
  int64 created_ts = 7;
  // The time when this configuration was last updated.
  int64 updated_ts = 8;
}

// SensitiveDataApprovalRecord represents the approval record for a sensitive data change.
message SensitiveDataApprovalRecord {
  // The ID of the approval record.
  int32 id = 1;
  // The UID of the approval record.
  string uid = 2;
  // The ID of the issue this approval record belongs to.
  int32 issue_id = 3;
  // The sensitivity level of the data being changed.
  SensitiveDataLevel sensitivity_level = 4;
  // The list of sensitive fields being changed.
  repeated string sensitive_fields = 5;
  // The current approval status.
  ApprovalStatus status = 6;
  // The ID of the user who created this approval record.
  int32 creator_id = 7;
  // The ID of the user who last updated this approval record.
  int32 updater_id = 8;
  // The time when this approval record was created.
  int64 created_ts = 9;
  // The time when this approval record was last updated.
  int64 updated_ts = 10;
}

// ApprovalStatus represents the status of an approval.
enum ApprovalStatus {
  APPROVAL_STATUS_UNSPECIFIED = 0;
  // Approval is pending.
  PENDING = 1;
  // Approval has been approved.
  APPROVED = 2;
  // Approval has been rejected.
  REJECTED = 3;
}

